# build_gpt2

./: .gitignore  README.md  build_gpt2.md  checkpoint_manager.py  config.py  dataset.py  device.py  hellaswag.py  log_test.txt  logging.py  main.py  model.py  play.ipynb  preset.py  pyproject.toml  run.py  test.ipynb  train.py  train_gpt2.py  train_gpt2_ori.py  util.py  utils.py
src/: checkpoint_manager.py
tests/: test_config.py  test_model.py  test_utils.py
