[build-system]
requires = ["setuptools", "wheel", "torch>=2.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "build-gpt2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=4.4.1",
    "matplotlib>=3.9.4",
    "pydantic>=2.12.4",
    "tiktoken>=0.12.0",
    "torch>=2.8.0",
    "transformers>=4.57.1",
    "urllib3>=2.5.0",
    "einops>=0.8.0",
    "accelerate>=1.10.1",
]

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
    "pytest>=8.2.2",
    "pytest-mock>=3.14.0",
]
